WAC-60- Fix overlapping insights content

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -920,10 +920,6 @@ p.small {
         width: 100%;
         height: 100%;
     }
-    .insights .container {
-        border: blue thin solid;
-        /*height: 3000px;*/
-    }
     .after-insights {
         padding-top: 85%;
         background: var(--who-blue-ten-percent);
